Bugfix: Fix the style of the all settings component in dark mode.

--- a/app/_components/all-settings/all-settings.module.css
+++ b/app/_components/all-settings/all-settings.module.css
@@ -27,7 +27,7 @@
 
 @media (prefers-color-scheme: dark) {
   .settingsList {
-    background-color: var(--color-neutral-800);
+    background-color: var(--color-neutral-950);
   }
 }
 
